clusters/on-prem-cluster/apps/semaphore/semaphore-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphore
  namespace: semaphore
  labels:
    app: semaphore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: semaphore
  template:
    metadata:
      labels:
        app: semaphore
    spec:
      containers:
      - name: semaphore
        image: semaphoreui/semaphore:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
